# Exodus

./: .gitattributes  .gitignore  CMakeLists.txt  Cortez-Terminal  Instructions.md  Makefile  New File  README.md  RunCRT  Set.md  TODO.txt  compile_log.txt  hello_window.atom  init_vmem  install  install-dependencies.sh  install-k  run.txt  test.nl  test.txt  test_returns.atom  test_turing.atom  uninstall  wireframe.txt
Documentations/: CTZ-Json-Documentation.docx  Exodus Documentation.docx  Mesh Documentation.docx
exodus-term/: Cargo.toml
exodus-term/src/: config.rs  console.rs  font.rs  input.rs  main.rs  renderer.rs
include/: auto-nav.h  autosuggest.h  child_handler.h  cortez-mesh.h  ctz-set.h  errors.h  excon_io.h  exodus-common.h  interrupts.h  kernel_repl.h  signals.h  syscall_commands.h  utils.h
k-module/: ..module-common.o.cmd  .Module.symvers.cmd  .cortez_tunnel.ko.cmd  .cortez_tunnel.mod.cmd  .cortez_tunnel.mod.o.cmd  .cortez_tunnel.o.cmd  .modules.order.cmd  Makefile  cortez_tunnel.c  cortez_tunnel.ko  cortez_tunnel.mod  cortez_tunnel.mod.c
k-module/cortez_cokernel/: .cortez_cokernel.ko.cmd  .cortez_cokernel.mod.cmd  .cortez_cokernel.mod.o.cmd  .cortez_cokernel.o.cmd  .modules.order.cmd  Makefile  cortez_cokernel.c  cortez_cokernel.h  cortez_cokernel.ko  cortez_cokernel.mod  cortez_cokernel.mod.c  modules.order
k-module/exodus_console/: .exodus_console.ko.cmd  .exodus_console.mod.cmd  .exodus_console.mod.o.cmd  .exodus_console.o.cmd  .modules.order.cmd  Makefile  exodus_console.c  exodus_console.ko  modules.order  (+3 more)
module-source/: Random_Game  Sample.cpp  main.cpp  sample.py  sampleProc.cpp  test.c
root/: git_client  sample.txt
server side/: Info.md
server-side/: exodus-coordinator.c
serverside-files/: ckg_server.py  info.md
src/: Xpdate.c  auth.c  auto-nav.c  autosuggest.c  child_handler.c  cortez-mesh.c  cortez_backend.c  cortez_frontend.c  cortez_ipc.c  cortez_mesh_userland.c  ctz-json.c  ctz-set.c  ctz-set.md  errors.c  excon_io.c  exctl.c  exodus-anchor-weaver.c  exodus-cloud-daemon.c  exodus-common.h  exodus-gui.py  exodus-node-guardian.c  exodus-query-daemon.c  exodus-signal.c  exodus-tui.c  exodus.c  exodus_snapshot.c  info.md  interrupts.c  kernel_repl.c  net-runner.c  node-editor.c  signals.c  syscall_commands.c  utils.c
tools/: import_bin  import_bin.c
tools-src/: Info.md  alone_scanner.c  c-login.c  cartridge.c  cedit.c  ckg.c  compile.c  cortez-mesh.c  cortez_ipc.h  cortez_memmgr.c  cortez_pm.c  cortez_su_helper.c  ctz-buff.c  ctz-buff.h  ctz-builder.c  ctz-env-scanner.c  ctz-linker.c  ctz-logger.c  ctz-set.c  ctz-set.h  decrypt.c  df-digest.c  df_filter.c  dialogue.h  digest-check.c  digest-filter.c  encrypt.c  exodus-anchor-weaver.c  exodus-cloud-daemon.c  exodus-common.h  exodus-node-guardian.c  exodus.c  file-digest.c  filehandler.c  find.c  lsexec.c  make_bootrom.c  net-twerk.c  node-editor.c  pwd.c  (+13 more)
(+96 files in other folders)
